# lightmatrix

./: Cargo.toml  LICENSE  README.md
src/: README.md  dualquat.rs  dualscalar.rs  inner.rs  lib.rs  mat1x3.rs  mat3.rs  mat3x1.rs  matrix.rs  matrix_slice.rs  operator.rs  quat.rs  quatr.rs  quatt.rs  scalar.rs  util.rs
