[package]
name = "lightmatrix"
version = "0.2.0"
license = "MIT"
authors = ["Bill Liu"]
description = "lightweight 2D matrix utilities"
documentation = "https://docs.rs/lightmatrix"
homepage = "https://github.com/exbibyte/lightmatrix"
keywords = ["matrix"]
edition = "2018"

[dependencies]
num-traits = "0.2"
more-asserts = "0.2"
delegate = "0.6.1"
paste = "1.0.5"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.0"
